[tool.poetry]
name = "locaturing"
version = "0.1.0"
description = ""
authors = ["turing-usp"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
numpy = "^1.20.3"
sklearn = "^0.0"
boto3 = "^1.17.73"
streamlit = "^0.82.0"
prospector = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
